--- a/console/extension/index.html
+++ b/console/extension/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset='utf-8' />
-		<title>Script editor extension</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link href = 'editor/editor.css' rel = 'stylesheet' />
-		<style>
-* {
-	background: #000;
-	color: #AAA;
-}
-		</style>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
+		<title>Template extension</title>
+		<!-- <link href="" rel="stylesheet" /> -->
+		<!-- <script src=""></script> -->
 	</head>
 	<body>
-		<textarea name="editor" spellcheck="false" autofocus></textarea>
+		<h1>Template extension</h1>
 	</body>
-	<script src='editor/editor.js'></script>
 </html>
+
